crates/sgf-core/tests/snapshots/scenario_paint/script_3_enabled.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Made Sol #3 a Paint a Galaxy spawn (enabled)
inverse: SetSpawnScript { system: 3, script: Some(PaintAGalaxy { kind: Sol, random_value: 0, player: false }) }

--- scenario
+++ scenario
@@ -34,7 +34,7 @@
 	system = { id = "0" position = { x = 0 y = 120 } name = "Alpha" initializer = random_empire_init_01 spawn_weight = { base = 0 add = value:painted_galaxy_spawn_weight|RANDOM_MODULO|10|RANDOM_VALUE|3| } }
 	system = { id = "1" position = { x = 110 y = 40 } name = "Beta" initializer = random_empire_init_02 spawn_weight = { base = 0 add = value:painted_galaxy_spawn_weight|PREFERRED|yes|RANDOM_MODULO|10|RANDOM_VALUE|1| } }
 	system = { id = "2" position = { x = 70 y = -100 } name = "Gamma" initializer = random_empire_init_03 spawn_weight = { base = 0 add = value:painted_galaxy_spawn_weight|RESERVED|a|RANDOM_MODULO|3|RANDOM_VALUE|2| } }
-	system = { id = "3" position = { x = -70 y = -100 } name = "Sol" initializer = sol_system_initializer spawn_weight = { base = 0 add = value:painted_galaxy_spawn_weight|SOL|yes|RANDOM_MODULO|1|RANDOM_VALUE|0| } }
+	system = { id = "3" position = { x = -70 y = -100 } name = "Sol" initializer = sol_system_initializer spawn_weight = { base = 0 add = value:painted_galaxy_spawn_weight|RANDOM_MODULO|10|RANDOM_VALUE|9| } }
 	system = { id = "4" position = { x = -110 y = 40 } name = "Delta" initializer = custom_starting_init_01 effect = { set_star_flag = painted_galaxy_custom_initializer } }
 	system = { id = "5" position = { x = 40 y = 80 } initializer = painted_galaxy_rl_basic effect = { set_star_flag = painted_galaxy_automatic_initializer } }
 	system = { id = "6" position = { x = -40 y = 80 } initializer = painted_galaxy_rl_basic effect = { set_star_flag = painted_galaxy_automatic_initializer } }
